src/test/ui/extenv/extenv-too-many-args.stderr
error: env! takes 1 or 2 arguments
  --> $DIR/extenv-too-many-args.rs:1:13
   |
LL | fn main() { env!("one", "two", "three"); } //~ ERROR: env! takes 1 or 2 arguments
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

